--- a/src/pages/References/References.css
+++ b/src/pages/References/References.css
@@ -89,3 +89,11 @@
 .project-card:hover h3, .project-card:hover p {
   color: #fff;
 }
+
+/* মোবাইলের জন্য প্রতিটি কার্ডের নিচে গ্যাপ তৈরি করার কোড */
+@media (max-width: 991px) {
+  .projects-grid .col-md-6,
+  .projects-grid .col-lg-3 {
+    margin-bottom: 20px !important; /* মোবাইলে বক্সগুলোর মাঝে ফাঁকা জায়গা রাখবে */
+  }
+}
